<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
=======
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> 858512e0cb57c9d5ea03fd249a5e88d9bdc1acd5
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/swmbg"
    android:orientation="vertical"
    tools:context=".Activity.CadastroMotorista.CadastroActivity">

<<<<<<< HEAD
    <EditText
        android:id="@+id/edtCadNome"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/nome"
        android:inputType="textCapCharacters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtCadSobrenome"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/sobrenome"
        android:inputType="textCapCharacters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCadNome" />

    <EditText
        android:id="@+id/edtCadDataNascimento"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/data_nascimento"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCadSobrenome" />

    <EditText
        android:id="@+id/edtCadEmail"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCadDataNascimento" />

    <EditText
        android:id="@+id/edtCadSenha"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCadEmail" />

    <EditText
        android:id="@+id/edtCadConfirmarSenha"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/confirmar_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/rbFeminino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCadSenha" />


    <RadioButton
        android:id="@+id/rbFeminino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="true"
        android:hint="@string/feminino"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/rbMasculino"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCadConfirmarSenha" />

    <RadioButton
        android:id="@+id/rbMasculino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:hint="@string/masculino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rbFeminino"
        app:layout_constraintTop_toBottomOf="@+id/edtCadConfirmarSenha" />


    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_style"
        android:hint="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbFeminino" />

</android.support.constraint.ConstraintLayout>
=======
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <EditText
                android:background="@drawable/edit_text_style"
                android:id="@+id/edtCadNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="textPersonName"/>

            <EditText
                android:background="@drawable/edit_text_style"
                android:id="@+id/edtCadSobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sobrenome"
                android:inputType="textPersonName"/>

            <EditText
                android:background="@drawable/edit_text_style"
                android:id="@+id/edtCadDataNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Data de Nascimento (Dia/Mês/Ano)"
                android:inputType="date"/>

            <EditText
                android:background="@drawable/edit_text_style"
                android:id="@+id/edtCadCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Cpf (Apenas Números)"
                android:inputType="numberSigned"/>

            <EditText
                android:background="@drawable/edit_text_style"
                android:id="@+id/edtCadEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:background="@drawable/edit_text_style"
                android:id="@+id/edtCadSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword"/>

            <EditText
                android:background="@drawable/edit_text_style"
                android:id="@+id/edtCadConfirmarSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmar_senha"
                android:inputType="textPassword"/>

            <RadioGroup
                android:id="@+id/rgSexo"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbFeminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:hint="@string/feminino" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:id="@+id/rbMasculino"
                    android:hint="@string/masculino"
                    android:checked="true"
                    android:layout_height="wrap_content" />

            </RadioGroup>

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:hint="@string/salvar" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
>>>>>>> 858512e0cb57c9d5ea03fd249a5e88d9bdc1acd5
